# xPlay

./: BUGS  BUGS.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  PATCH.phonon-gstreamer-qt6  README.md  xApplication.cpp  xApplication.h  xMainMobileSyncWidget.cpp  xMainMobileSyncWidget.h  xMainMovieWidget.cpp  xMainMovieWidget.h  xMainMusicWidget.cpp  xMainMusicWidget.h  xMainStreamingWidget.cpp  xMainStreamingWidget.h  xMainWidget.cpp  xMainWidget.h  xMovieFile.cpp  xMovieFile.h  xMovieLibrary.cpp  xMovieLibrary.h  xMovieLibraryEntry.cpp  xMovieLibraryEntry.h  xMoviePlayer.cpp  xMoviePlayer.h  xMoviePlayerX.h  xMusicDirectory.cpp  xMusicDirectory.h  xMusicFile.cpp  xMusicFile.h  xMusicLibrary.cpp  xMusicLibrary.h  xMusicLibraryAlbumEntry.cpp  xMusicLibraryAlbumEntry.h  xMusicLibraryArtistEntry.cpp  xMusicLibraryArtistEntry.h  xMusicLibraryEntry.cpp  xMusicLibraryEntry.h  (+80 more)
movieplayer/: xMoviePlayerPhonon.cpp  xMoviePlayerPhonon.h  xMoviePlayerVLC.cpp  xMoviePlayerVLC.h
musicplayer/: xMusicPlayerPhonon.cpp  xMusicPlayerPhonon.h  xMusicPlayerQt.cpp  xMusicPlayerQt.h
plastikstyle/: CMakeLists.txt  README
plastikstyle/qt6/: CMakeLists.txt  plastikstyle.cpp
playerwidget/: xPlayerBalanceWidgetQt.cpp  xPlayerBalanceWidgetQt.h  xPlayerBalanceWidgetQwt.cpp  xPlayerBalanceWidgetQwt.h  xPlayerSliderWidgetQt.cpp  xPlayerSliderWidgetQt.h  xPlayerSliderWidgetQwt.cpp  xPlayerSliderWidgetQwt.h  xPlayerVolumeWidgetQt.cpp  xPlayerVolumeWidgetQt.h  xPlayerVolumeWidgetQwt.cpp  xPlayerVolumeWidgetQwt.h
releases/ubuntu-22.04/: xPlay_0.15.0_amd64.deb
tests/: test_xMovieLibrary.cpp  test_xMovieLibrary.h  test_xMusicDirectory.cpp  test_xMusicDirectory.h  test_xMusicFile.cpp  test_xMusicFile.h  test_xMusicLibrary.cpp  test_xMusicLibrary.h  test_xMusicLibraryEntry.cpp  test_xMusicLibraryEntry.h  test_xMusicLibraryTrackName.cpp  test_xMusicLibraryTrackName.h  test_xPlay.cpp  test_xPlayerRotelControls.cpp  test_xPlayerRotelControls.h
tests/input/: test_file.flac  test_file.wv  test_file_hd.flac
